fix(spark): isolate AWS runtimes and streamline integration tests
- align Hadoop S3A dependencies on 3.4.3
- relocate Iceberg’s embedded Amazon libraries
- configure explicit Polaris OAuth and Spark resource limits
- use per-container tmpfs scratch storage
- separate cold submission tests from warm query tests
- add runtime classpath, S3A, and cluster guardrails
- improve Git Bash and WSL test-script portability